Bug 15754 - Panic in close_directory
Summary: Panic in close_directory
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-18 09:49 UTC by Ralph Böhme
Modified: 2025-05-10 04:39 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.20 and 4.21 backported from master (1.46 KB, patch)
2024-11-19 11:28 UTC, Ralph Böhme
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2024-11-18 09:49:58 UTC
[2024/10/21 10:00:59.397186,  0] ../../source3/locking/share_mode_lock.c:2971(share_mode_entry_prepare_lock_fn)
  share_mode_entry_prepare_lock_fn: get_share_mode_lock_internal failed: NT_STATUS_NOT_FOUND
[2024/10/21 10:00:59.397278,  0] ../../source3/smbd/close.c:452(close_remove_share_mode)
  close_remove_share_mode: share_mode_entry_prepare_lock_del() failed for directory
65D2024-04-27T173508_961F.temp - NT_STATUS_NOT_FOUND
[2024/10/21 10:00:59.401227,  0] ../../source3/locking/share_mode_lock.c:2971(share_mode_entry_prepare_lock_fn)
  share_mode_entry_prepare_lock_fn: get_share_mode_lock_internal failed: NT_STATUS_NOT_FOUND
[2024/10/21 10:00:59.401269,  0] ../../source3/smbd/close.c:452(close_remove_share_mode)
  close_remove_share_mode: share_mode_entry_prepare_lock_del() failed for directory
65D2024-04-27T173508_961F.vbk - NT_STATUS_NOT_FOUND
[2024/10/21 10:00:59.401952,  0] ../../source3/locking/share_mode_lock.c:2971(share_mode_entry_prepare_lock_fn)
  share_mode_entry_prepare_lock_fn: get_share_mode_lock_internal failed: NT_STATUS_NOT_FOUND
[2024/10/21 10:00:59.401988,  0] ../../source3/smbd/close.c:1507(close_directory)
  close_directory: share_mode_entry_prepare_lock_del() failed for . - NT_STATUS_NOT_FOUND
[2024/10/21 10:00:59.402210,  0] ../../source3/smbd/fd_handle.c:39(fd_handle_destructor) 
 PANIC: assert failed at ../../source3/smbd/fd_handle.c(39): (fh->fd == -1) || (fh->fd == AT_FDCWD)

We may want to avoid the panic and instead just log an error and a SBT.
Comment 1 Samba QA Contact 2024-11-18 12:44:03 UTC
This bug was referenced in samba master:

f86d1a35917cdcc07b2fa741c6a369aaad24abaf
Comment 2 Ralph Böhme 2024-11-19 11:28:00 UTC
Created attachment 18497 [details]
Patch for 4.20 and 4.21 backported from master
Comment 3 Jule Anger 2024-11-20 08:55:36 UTC
Pushed to autobuild-v4-{21,20}-test.
Comment 4 Samba QA Contact 2024-11-20 09:56:03 UTC
This bug was referenced in samba v4-21-test:

6afa2ce5dc2e8ec3650029f64b601a59d30f6e24
Comment 5 Samba QA Contact 2024-11-20 11:18:03 UTC
This bug was referenced in samba v4-20-test:

82db30cdbd9d2ce3a49dbcb9bbafc81b4fdb331f
Comment 6 Jule Anger 2024-11-20 12:03:34 UTC
Closing out bug report.

Thanks!
Comment 7 Samba QA Contact 2024-11-25 15:11:19 UTC
This bug was referenced in samba v4-21-stable (Release samba-4.21.2):

6afa2ce5dc2e8ec3650029f64b601a59d30f6e24
Comment 8 Samba QA Contact 2025-01-21 13:50:20 UTC
This bug was referenced in samba v4-20-stable (Release samba-4.20.7):

82db30cdbd9d2ce3a49dbcb9bbafc81b4fdb331f
Comment 9 Sandeep Kumar(Panzura) 2025-05-10 04:39:53 UTC
This patch avoids samba panic, but does it resolve "NT_STATUS_NOT_FOUND" error?